<resources>
    <string name="app_name">DoctorsApp</string>
    <string name="splash_main_text">TODD\'S SYNDROME\nPREDICTOR</string>

    <string name="pacient_new_name_hint">Full Name</string>
    <string name="pacient_new_age_hint">Age</string>
    <string name="pacient_new_gender_label">Gender</string>
    <string name="pacient_new_gender_option_one">Male</string>
    <string name="pacient_new_gender_option_two">Female</string>
    <string name="pacient_new_migraine_label">Do you have migraine?</string>
    <string name="pacient_new_drugs_label">Do you do drugs?</string>
    <string name="pacient_new_save">Save Pacient</string>

    <string name="error_name_message">Pacient name can\'t be empty</string>
    <string name="error_age_message">Please enter a valid age</string>
    <string name="error_db_message">Couldn\'t save pacient data, please try again later</string>
    <string name="error_message_db_empty">There aren\'t any patiens at this moment, try adding one</string>
</resources>
